create config file and improve somatic calling

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,9 +1,22 @@
-
 params {
-    samplesheet = "samplesheet.csv"
-    ref_genome = '/orfeo/LTS/LADE/LT_storage/lvaleriani/CNA/ref/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna'
-    ref_fai = "${params.ref_genome}.fai"
-    bed_data="/u/area/ffabris/fast/long_reads_pipeline/test_data/pos"
+    input = null
+    outdir = null
+
+    ref_genome = "/orfeo/LTS/LADE/LT_storage/lvaleriani/CNA/ref/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna"
+    ref_fai = "/orfeo/LTS/LADE/LT_storage/lvaleriani/CNA/ref/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna.fai"
+    bed_data = "/orfeo/LTS/LADE/LT_storage/lvaleriani/CNA/allelecount/G1000_loci_hg38/pos"
+
 }
 
 
+includeConfig 'config/methylation.config'
+includeConfig 'config/pileup.config'
+includeConfig 'config/variant_calling.config'
+
+
+profiles {
+  singularity {
+    singularity.enabled = true
+    singularity.autoMounts = true
+  }
+}
