refactoring of everythin - miss to test variant_calling

--- a/config/methylation.config
+++ b/config/methylation.config
@@ -1,13 +1,13 @@
 process {
     withName: 'MODKIT' {
         cpus= 12
-        memory='100 GB'
+        memory='50 GB'
         time='48h'
 
         publishDir = [
             [
                 mode: 'copy',
-                path: { "${params.outdir}/methylation/modkit/" },
+                path: { "${params.outdir}/methylation/modkit/${meta.sampleID}/" },
                 pattern: "*{bed, log}"
             ]
         ]
@@ -19,7 +19,7 @@ process {
         publishDir = [
             [
                 mode: 'copy',
-                path: { "${params.outdir}/methylation/get_positions/" },
+                path: { "${params.outdir}/methylation/get_positions/${meta.sampleID}/" },
                 pattern: "*{_meth}"
             ]
         ]
@@ -27,11 +27,12 @@ process {
     
     withName: 'READ_BED' {
         memory='16 GB'
+        time='1h'
 
         publishDir = [
             [
                 mode: 'copy',
-                path: { "${params.outdir}/methylation/read_bed/" },
+                path: { "${params.outdir}/methylation/read_bed/${meta.sampleID}/" },
                 pattern: "*{RDS}"
             ]
         ]
@@ -45,7 +46,7 @@ process {
         publishDir = [
             [
                 mode: 'copy',
-                path: { "${params.outdir}/methylation/pileup/" },
+                path: { "${params.outdir}/methylation/pileup/${meta.sampleID}/${meta.type}/" },
                 pattern: "*{vcf}"
             ]
         ]
@@ -57,7 +58,7 @@ process {
         publishDir = [
             [
                 mode: 'copy',
-                path: { "${params.outdir}/methylation/combine/" },
+                path: { "${params.outdir}/methylation/combine/${meta.sampleID}/" },
                 pattern: "*{RDS}"
             ]
         ]
