--- a/config/pileup.config
+++ b/config/pileup.config
@@ -1,40 +1,27 @@
 process {
-    withName: 'SPLIT_BAM' {
-        memory='200 GB'
-        time='10h'
-
-        publishDir = [
-            [
-                mode: 'copy',
-                path: { "${params.outdir}/pileup/split_bam/" },
-                pattern: "*{bam, bai}"
-            ]
-        ]
-    }
-
     withName: 'PILEUP_CN' {
-        memory='200 GB'
+        memory='50 GB'
         time='12h'
         cpus= 12
 
         publishDir = [
             [
                 mode: 'copy',
-                path: { "${params.outdir}/pileup/pileup_cn/" },
+                path: { "${params.outdir}/pileup/pileup_cn/${meta.sampleID}/${meta.type}/" },
                 pattern: "*{vcf}"
             ]
         ]
     }
 
     withName: 'WHATSHAP' {
-        memory='200 GB'
+        memory='100 GB'
         time='12h'
         cpus=12
 
         publishDir = [
             [
                 mode: 'copy',
-                path: { "${params.outdir}/pileup/whatshap/" },
+                path: { "${params.outdir}/pileup/whatshap/${meta.sampleID}/${meta.type}/" },
                 pattern: "*{vcf}"
             ]
         ]
@@ -46,7 +33,7 @@ process {
         publishDir = [
             [
                 mode: 'copy',
-                path: { "${params.outdir}/pileup/read_phasing/" },
+                path: { "${params.outdir}/pileup/read_phasing/${meta.sampleID}/" },
                 pattern: "*{RDS}"
             ]
         ]
