--- a/config/variant_calling.config
+++ b/config/variant_calling.config
@@ -7,7 +7,7 @@ process {
         publishDir = [
             [
                 mode: 'copy',
-                path: { "${params.outdir}/variant_calling/clairS/" },
+                path: { "${params.outdir}/variant_calling/clairS/${meta.sampleID}/" },
                 pattern: "*{vcf}"
             ]
         ]
@@ -20,7 +20,7 @@ process {
         publishDir = [
             [
                 mode: 'copy',
-                path: { "${params.outdir}/variant_calling/read_somatic/" },
+                path: { "${params.outdir}/variant_calling/read_somatic/${meta.sampleID}/" },
                 pattern: "*{RDS}"
             ]
         ]
