--- a/nextflow.config
+++ b/nextflow.config
@@ -1,17 +1,22 @@
+includeConfig 'config/methylation.config'
+includeConfig 'config/pileup.config'
+includeConfig 'config/variant_calling.config'
+includeConfig 'config/split_bam.config'
+
+
 params {
     input = null
     outdir = null
 
     ref_genome = "/orfeo/LTS/LADE/LT_storage/lvaleriani/CNA/ref/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna"
     ref_fai = "/orfeo/LTS/LADE/LT_storage/lvaleriani/CNA/ref/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna.fai"
-    bed_data = "/orfeo/LTS/LADE/LT_storage/lvaleriani/CNA/allelecount/G1000_loci_hg38/pos"
+    bed_data = "/orfeo/LTS/LADE/LT_storage/lvaleriani/CNA/allelecount/G1000_loci_hg38/pos_short"
 
 }
 
-
-includeConfig 'config/methylation.config'
-includeConfig 'config/pileup.config'
-includeConfig 'config/variant_calling.config'
+plugins {
+  id 'nf-schema@2.0.0'
+}
 
 
 profiles {
