all working + update

--- a/config/variant_calling.config
+++ b/config/variant_calling.config
@@ -1,14 +1,14 @@
 process {
     withName: 'CLAIRS' {
-        cpus=1
-        memory='200 GB'
+        cpus=36
+        memory='100 GB'
         time='48h'
 
         publishDir = [
             [
                 mode: 'copy',
                 path: { "${params.outdir}/variant_calling/clairS/${meta.sampleID}/" },
-                pattern: "*{vcf}"
+                pattern: "*{vcf.gz,vcf,tbi}"
             ]
         ]
     }
