--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
-includeConfig 'config/methylation.config'
+includeConfig 'config/methylation_calling.config'
 includeConfig 'config/pileup.config'
 includeConfig 'config/variant_calling.config'
-includeConfig 'config/split_bam.config'
+includeConfig 'config/split_align.config'
 
 
 params {
@@ -10,7 +10,7 @@ params {
 
     ref_genome = "/orfeo/LTS/LADE/LT_storage/lvaleriani/CNA/ref/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna"
     ref_fai = "/orfeo/LTS/LADE/LT_storage/lvaleriani/CNA/ref/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna.fai"
-    bed_data = "/orfeo/LTS/LADE/LT_storage/lvaleriani/CNA/allelecount/G1000_loci_hg38/pos_short"
+    bed_file = "/orfeo/LTS/LADE/LT_storage/lvaleriani/CNA/allelecount/G1000_loci_hg38/pos_short"
 
 }
 
